# Masters

./: README.md  arch_trace.csv  plateau_trace.csv  plotter_test.py  reference_results.csv  sensor_test.py  stair_trace.csv  temperature_trace.csv
EH_IoT_Eval_240415/EH_IoT_Eval-master/modules/: Aux.py
Energy_harvester_iot/Code/SoC/: CMakeLists.txt  prj.conf
Energy_harvester_iot/Code/SoC/boards/: iot_energy_harvesting_main_system.overlay  nrf52832_mdk.overlay  nrf52840dk_nrf52840.overlay
Energy_harvester_iot/Code/SoC/lib/: GPIO_extender.h  I2C.c  I2C.h  I2C_Switch.h  TempSensor.c  TempSensor.h  macros.h  memory.c  memory.h
Energy_harvester_iot/Code/SoC/src/: GPIO_extender.c  GPIO_extender.h  I2C.c  I2C.h  I2C_Switch.c  I2C_Switch.h  I2C_control.c  I2C_control.h  TempSensor.c  TempSensor.h  accuracyAlgorithms.c  inc.h  macros.h  main.c  memory.c  memory.h  timers.c  timers.h
Energy_harvester_iot/Diagrams/: LinearDistance.drawio  Notes.txt  SoC_program_flow.drawio  Temperature_jig.drawio  adaptiveSampling.drawio  dataframes.drawio  ref_sensors_trace.fig  systemArchitecture.drawio  temp_trace.fig
Energy_harvester_iot/Simulations/: Distance_sensor.m  Distance_sensor.mat  Distance_sensorTemp.m  Distance_sensorTemp.mat  Experiment_city.asv  Experiment_city.m  FlopCalculator.m  Linear_reg.m  Lowpass_template.m  RunningAverage.m  RunningAverageTemp.mat  Temp_Kalman.m  Template.asv  Template.m  TestBench.asv  TestBench.m  TestBenchData.mat  Tinker_town.asv  Tinker_town.m  VotingTemp.m  VotingTemp.mat  signalClean.mat  signalNoisy.mat
(+135 files in other folders)
